// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Markdown List should render an ordered list 1`] = `
<ol
  className="rsg--list-0 rsg--ordered-1"
>
  <li
    className="rsg--li-2"
  >
    First
  </li>
  <li
    className="rsg--li-2"
  >
    Second
  </li>
</ol>
`;

exports[`Markdown List should render an unordered list 1`] = `
<ul
  className="rsg--list-0"
>
  <li
    className="rsg--li-2"
  >
    First
  </li>
  <li
    className="rsg--li-2"
  >
    Second
  </li>
</ul>
`;
